[gd_scene load_steps=5 format=4 uid="uid://cxttcdwy4ber5"]

[ext_resource type="Script" uid="uid://hg3uf5e1mg6b" path="res://scenes/schematic_container.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://berthf545d4ct" path="res://textures/icons/globe.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bsr2vwbsr8unc" path="res://textures/icons/plus.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b3f52fd42p62t" path="res://textures/icons/trash_bin.png" id="4"]

[node name="SchematicContainer" type="VBoxContainer"]
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/separation = -10
script = ExtResource("1")

[node name="SchematicButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_type_variation = &"ButtonExpand"
toggle_mode = true

[node name="Icon" type="TextureRect" parent="SchematicButton"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -26.0
offset_right = 76.0
offset_bottom = 26.0
grow_vertical = 2
pivot_offset = Vector2(35, 35)
mouse_filter = 2
texture = ExtResource("2")
expand_mode = 1

[node name="InfoContainer" type="VBoxContainer" parent="SchematicButton"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 100.0
offset_top = 10.0
offset_right = -198.0
offset_bottom = 90.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Name" type="Label" parent="SchematicButton/InfoContainer"]
auto_translate_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Network"

[node name="Add" type="Button" parent="SchematicButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 40
icon = ExtResource("3")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Delete" type="Button" parent="SchematicButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -40.0
offset_right = -100.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 40
icon = ExtResource("4")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DetailsPanel" type="PanelContainer" parent="."]
visible = false
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"MenuExpandPanel"

[node name="DetailsContainer" type="VBoxContainer" parent="DetailsPanel"]
layout_mode = 2

[connection signal="pressed" from="SchematicButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SchematicButton/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="SchematicButton/Delete" to="." method="_on_delete_pressed"]
